[gd_scene load_steps=10 format=3 uid="uid://p5vugbnby88f"]

[ext_resource type="Script" path="res://main_scenes/in_game.gd" id="1_cjgxw"]
[ext_resource type="PackedScene" uid="uid://bvnolpmg6t54n" path="res://ui/main_ui.tscn" id="1_yhcwg"]
[ext_resource type="Theme" uid="uid://b64f3uxca5mhe" path="res://main_theme.tres" id="4_7clbw"]
[ext_resource type="Shader" path="res://vhs_shader.gdshader" id="4_7om8c"]

[sub_resource type="Gradient" id="Gradient_khwn7"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b4iw3"]
gradient = SubResource("Gradient_khwn7")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nyo44"]
resource_local_to_scene = true
shader = ExtResource("4_7om8c")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.005
shader_parameter/scanlines_width = 0.081
shader_parameter/grille_opacity = 0.005
shader_parameter/resolution = Vector2(1024, 768)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 3.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 0.1
shader_parameter/distort_intensity = 0.001
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 0.0
shader_parameter/static_noise_intensity = 0.022
shader_parameter/aberration = 0.01
shader_parameter/brightness = 0.9
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.026
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.132
shader_parameter/aberration_vignette = SubResource("GradientTexture2D_b4iw3")

[sub_resource type="Gradient" id="Gradient_2c5hd"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1e3sh"]
gradient = SubResource("Gradient_2c5hd")

[node name="InGame" type="Node2D"]
script = ExtResource("1_cjgxw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
theme = ExtResource("4_7clbw")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -74.5
offset_right = 157.0
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 120

[node name="LevelDescriptionLabel" type="Label" parent="CanvasLayer/Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Timer starts when you move..."
horizontal_alignment = 1
vertical_alignment = 2

[node name="MainUI" parent="CanvasLayer" instance=ExtResource("1_yhcwg")]

[node name="ScreenContainer" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -998.0
offset_top = -645.0
offset_right = 2554.0
offset_bottom = 1765.0
color = Color(0.235294, 0.192157, 0.317647, 1)

[node name="LevelContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 0

[node name="ScreenSpaceShader" type="TextureRect" parent="CanvasLayer2/Control"]
material = SubResource("ShaderMaterial_nyo44")
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("GradientTexture1D_1e3sh")
